change to use kaniko action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -127,7 +127,7 @@ jobs:
 
     # Build and push frontend image with Kaniko
     - name: Build and push frontend image with Kaniko
-      uses: gcr.io/kaniko-project/executor:latest
+      image: gcr.io/kaniko-project/executor:latest
       with:
         args: >
           --dockerfile=./frontend/Dockerfile
@@ -137,7 +137,7 @@ jobs:
 
     # Build and push backend image with Kaniko
     - name: Build and push backend image with Kaniko
-      uses: gcr.io/kaniko-project/executor:latest
+      image: gcr.io/kaniko-project/executor:latest
       with:
         args: >
           --dockerfile=./backend/Dockerfile
