--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -128,14 +128,15 @@ jobs:
     # container:
     #   image: gcr.io/kaniko-project/executor:v1.20.0-debug 
     uses: aevea/action-kaniko@master
-    permissions:
-      contents: read # read the repository
+    # permissions:
+    #   contents: read # read the repository
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
     # Build and push frontend image with Kaniko
     - name: Build and push frontend image with Kaniko
+      image: aevea/kaniko
       run: |
         # Create Docker config for authentication
         cat <<EOF > /kaniko/.docker/config.json
@@ -157,6 +158,7 @@ jobs:
           
     # Build and push backend image with Kaniko
     - name: Build and push backend image with Kaniko
+      image: aevea/kaniko
       run: |
         # Reuse the Docker authentication config
         /kaniko/executor --dockerfile="./backend/Dockerfile" \
