change to use kaniko action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -125,18 +125,16 @@ jobs:
   build-push:
     runs-on: arc-runner-set
     needs: get-env
-    # container:
-    #   image: gcr.io/kaniko-project/executor:v1.20.0-debug 
-    # uses: aevea/action-kaniko@master
-    # permissions:
-    #   contents: read # read the repository
+    container:
+      image: gcr.io/kaniko-project/executor:v1.20.0-debug 
+    permissions:
+      contents: read # read the repository
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
     # Build and push frontend image with Kaniko
     - name: Build and push frontend image with Kaniko
-      uses: aevea/action-kaniko@master
       run: |
         # Create Docker config for authentication
         cat <<EOF > /kaniko/.docker/config.json
@@ -158,7 +156,6 @@ jobs:
           
     # Build and push backend image with Kaniko
     - name: Build and push backend image with Kaniko
-      uses: aevea/action-kaniko@master
       run: |
         # Reuse the Docker authentication config
         /kaniko/executor --dockerfile="./backend/Dockerfile" \
