push on dockerhub

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,6 +40,8 @@ jobs:
     permissions:
       contents: read
     steps:
+    # - name: Checkout code
+    #   uses: actions/checkout@v3
 
     # Build and push frontend image with Kaniko
     - name: Build and push frontend image with Kaniko
