--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,17 +31,19 @@ jobs:
 
         # Run Kaniko to build and push the frontend image
         /kaniko/executor --dockerfile="./frontend/Dockerfile" \
-          --context="dir://./"  \
+          # --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}"  \
           --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
           ${{ env.KANIKO_CACHE_ARGS }} \
           --push-retry 5
+          --cleanup
 
     # Build and push backend image with Kaniko
     - name: Build and push backend image with Kaniko
       run: |
         # Reuse the Docker authentication config
         /kaniko/executor --dockerfile="./backend/Dockerfile" \
-          --context="dir://./" \
+          # --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}" \
           --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:$(echo ${{ github.sha }} | head -c 7)" \
           ${{ env.KANIKO_CACHE_ARGS }} \
           --push-retry 5
+          --cleanup
