--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,4 +46,4 @@ jobs:
           --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:$(echo ${{ github.sha }} | head -c 7)" \
           ${{ env.KANIKO_CACHE_ARGS }} \
           --push-retry 5
-          --cleanup
+          # --cleanup
