change in Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,16 +3,17 @@ FROM node:18-alpine
 WORKDIR /app
 
 RUN ls -la /app
-COPY package.json /app/
 
-COPY package-lock.json /app/
+COPY ./frontend/package.json /app/
+
+COPY ./frontend/package-lock.json /app/
 
 # Debugging step: List files in /app to ensure package*.json is present
 RUN ls -la /app
 
 RUN npm install
 
-COPY . /app/
+COPY ./frontend/. /app/
 
 RUN npm run build
 
