--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,38 +7,35 @@ env:
   KANIKO_CACHE_ARGS: "--cache=true --cache-copy-layers=true --cache-ttl=24h"
 
 jobs:
-  build-push-frontend:
-    runs-on: arc-runner-set
-    container:
-      image: gcr.io/kaniko-project/executor:v1.22.0-debug 
-    permissions:
-      contents: read
-    steps:
+  # build-push-frontend:
+  #   runs-on: arc-runner-set
+  #   container:
+  #     image: gcr.io/kaniko-project/executor:v1.22.0-debug 
+  #   permissions:
+  #     contents: read
+  #   steps:
 
-    - name: Checkout repository
-      uses: actions/checkout@v3
+  #   # Build and push frontend image with Kaniko
+  #   - name: Build and push frontend image with Kaniko
+  #     run: |
+  #       # Create Docker config for authentication
+  #       cat <<EOF > /kaniko/.docker/config.json
+  #       {
+  #         "auths": {
+  #           "https://index.docker.io/v1/": {
+  #             "auth": "$(echo -n "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_TOKEN }}" | base64 )"
+  #           }
+  #         }
+  #       }
+  #       EOF
 
-    # Build and push frontend image with Kaniko
-    - name: Build and push frontend image with Kaniko
-      run: |
-        # Create Docker config for authentication
-        cat <<EOF > /kaniko/.docker/config.json
-        {
-          "auths": {
-            "https://index.docker.io/v1/": {
-              "auth": "$(echo -n "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_TOKEN }}" | base64 )"
-            }
-          }
-        }
-        EOF
-
-        # Run Kaniko to build and push the frontend image
-        /kaniko/executor --dockerfile="./frontend/Dockerfile" \
-          --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}"  \
-          --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
-          ${{ env.KANIKO_CACHE_ARGS }} \
-          --push-retry 5 \
-          --cleanup
+  #       # Run Kaniko to build and push the frontend image
+  #       /kaniko/executor --dockerfile="./frontend/Dockerfile" \
+  #         --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}"  \
+  #         --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
+  #         ${{ env.KANIKO_CACHE_ARGS }} \
+  #         --push-retry 5 \
+  #         --cleanup
 
   build-push-backend:
     runs-on: arc-runner-set
@@ -47,9 +44,6 @@ jobs:
     permissions:
       contents: read
     steps:
-
-    - name: Checkout repository
-      uses: actions/checkout@v3
 
     # Build and push backend image with Kaniko
     - name: Build and push backend image with Kaniko
